--- a/resources/src/index.css
+++ b/resources/src/index.css
@@ -88,6 +88,14 @@
     }
 }
 
+.motd-message img {
+  max-width: 200px;
+  height: auto;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
 
 
 @layer base {
